--- a/client/src/styles/ReviewConfirmation.css
+++ b/client/src/styles/ReviewConfirmation.css
@@ -3,7 +3,8 @@
     top: 25%;
     left: 25%;
     transform: translate (-25%,-25%);
-    height: 50vh;
+    height: 100%;
+    max-height: 25vw;
     width: 50%;
     border: 2px solid rgba(1,1,1,0.1);
     box-shadow: 1px 5px 4px 2px rgba(1,1,1,0.2);
